# LLM-Extractify

./: .env.example  README.md  pyproject.toml
collection_creator/: create_zilliz_collection.py  query_milvus.py
config/: config.py  model_provider_config.py
config/prompts/: message_chunk.yaml  message_chunk_gemma.yaml  message_chunk_gemma_v2.yaml  message_chunk_openai_v2.yaml
data/: baseline_snnapshot_firecrawl_extract.json  data_snapshot.json  data_snapshot_clean.json  data_snapshot_clean_Gemma.json  data_snapshot_clean_OpenAI.json  data_snapshot_clean_llm_project.json  data_snapshot_clean_openai_backup.json  faq_test_queries.csv  faq_with_flattened_results.csv  scraped_data_firecrawl.json  scraped_data_firecrawl_project_data.json  scraped_data_firecrawl_project_test.json
frontend/: streamlit_ui.py
onboard_workflow/: clean_and_chunk.py  file_processor.py  onboard.py  url_processor.py
tests/: test_collection_curation.py  test_crawldata.py  test_gpt_models.py  test_onboard.py  test_query_embedding.py  test_single_query_retreival.py
utils/: services.py
