[tool.poetry]
name = "onboard-workflow"
version = "0.1.0"
description = "Agentic onboarding workflow with OCR, web crawling, and GPT refinement"
authors = ["prabhleen <prabhleen1.bindra@gmail.com>"]
readme = "README.md"
packages = [{ include = "onboard_workflow" }]
# Or add: package-mode = false  # if not using as a package

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
openai = "==1.68.0"
firecrawl-py = ">=1.15.0,<2.0.0"
mistralai = ">=1.6.0,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
python-dotenv = "^1.1.0"
jinja2 = "^3.1.6"
tiktoken = "^0.9.0"
pydantic = "^2.11.1"
dotenv = "^0.9.9"
firecrawl = "^1.15.0"
streamlit = "^1.44.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
